--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,6 +5,11 @@
     <title>Welcome to flights Application</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"/>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+    <style>
+        .btn-warning {
+            color: white;
+        }
+    </style>
 
 </head>
 
@@ -14,8 +19,23 @@
 <div class = "container">
     <h1> Welcome to GPS Trackers</h1>
     <p> <button type="button" class="btn btn-primary" onclick="window.location.href='/startAGroup.html'">START NEW TRACKING GROUP</button> </p>
-    <p> <button type="button" class="btn btn-success" onclick="window.location.href='/joinTheGroup.html'">JOIN TRACKING GROUP</button> </p>
-    <p> <button type="button" class="btn btn-warning" onclick="window.location.href='/pictureOfGrandma.html'">looking for my grandma</button> </p>
+    <p> <button type="button" class="btn btn-success" onclick="window.location.href='/joinTheGroup.html'">JOIN THE TRACKING GROUP</button> </p>
+    <p> <button type="button" class="btn btn-warning" onclick="window.location.href='/pictureOfGrandma.html'">LOOKING FOR MY GRANDMA</button> </p>
+    <p> track you and your friends in tree steps:
+        <ol>
+            <li>one of you create a tracking group</li>
+            <li>pass the tracking group name to everyone </li>
+            <li>join the tracking group</li>
+        </ol>
+    </p>
+
+    <p>
+        optional:<br>
+        Invite your friends by mail:<br>
+        TODO
+
+    </p>
+
 </div>
 
 </body>
