--- a/src/main/resources/public/startAGroup.html
+++ b/src/main/resources/public/startAGroup.html
@@ -30,21 +30,43 @@
 <script>
             $("#group-create-form").submit(function(e) {
                 e.preventDefault();
-                let p = {
-                    groupName: $(this.groupName).val(),
-                };
-                $.ajax({
-                    method: 'post',
-                    url: '/api/group',
-                    contentType: 'application/json',
-                    data: JSON.stringify(p),
-                    processData: false,
-                    success: function() {
-                       window.location.replace('index.html')
-                        //  set('window.location.href'','/index.html')
-                    }
+
+
+                $groupname=$(this.groupName).val();
+
+                var groupExist=false;
+                $.ajaxSetup({
+                    async: false
                 });
-                this.reset();
+                $.getJSON(`/api/group/${$groupname}`,function (){
+                    groupExist = true;
+                    return groupExist;
+                });
+
+                $.ajaxSetup({
+                    async: true
+                });
+
+                if(groupExist){alert('This group tracking name already exist, choose another one')}
+                else {
+                    let p = {
+                        groupName: $groupname,
+                    };
+
+
+                    $.ajax({
+                        method: 'post',
+                        url: '/api/group',
+                        contentType: 'application/json',
+                        data: JSON.stringify(p),
+                        processData: false,
+                        success: function () {
+                            window.location.replace('index.html')
+                            //  set('window.location.href'','/index.html')
+                        }
+                    });
+                    this.reset();
+                }
             });
 
         </script>
